--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="container">
+        <div id="display"></div>
+        <div id="buttonsContainer">
+            <button id="clear">AC</button>
+            <button id="sign">+/-</button>
+            <button id="percentage">%</button>
+            <button id="divide">/</button>
+            <button id="number">7</button>
+            <button id="number">8</button>
+            <button id="number">9</button>
+            <button id="multiply">*</button>
+            <button id="number">4</button>
+            <button id="number">5</button>
+            <button id="number">6</button>
+            <button id="subtract">-</button>
+            <button id="number">1</button>
+            <button id="number">2</button>
+            <button id="number">3</button>
+            <button id="add">+</button>
+            <button id="numberCero">0</button>
+            <button id="number">.</button>
+            <button id="equal">=</button>
+        </div>
+    </div>
+
     <script src="calculator.js"></script>
 </body>
 </html>
