Added the number's buttons

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <div id="container">
         <div id="display"></div>
         <div id="buttonsContainer">
-            <button id="clear">AC</button>
-            <button id="sign">+/-</button>
-            <button id="percentage">%</button>
-            <button id="divide">/</button>
-            <button id="number">7</button>
-            <button id="number">8</button>
-            <button id="number">9</button>
-            <button id="multiply">*</button>
-            <button id="number">4</button>
-            <button id="number">5</button>
-            <button id="number">6</button>
-            <button id="subtract">-</button>
-            <button id="number">1</button>
-            <button id="number">2</button>
-            <button id="number">3</button>
-            <button id="add">+</button>
-            <button id="numberCero">0</button>
-            <button id="number">.</button>
-            <button id="equal">=</button>
+            <button class="clear" id="clear">AC</button>
+            <button class="sign" id="sign">+/-</button>
+            <button class="percentage" id="percentage">%</button>
+            <button class="divide" id="divide">/</button>
+            <button class="seven" id="number">7</button>
+            <button class="eight" id="number">8</button>
+            <button class="nine" id="number">9</button>
+            <button class="multiply" id="multiply">*</button>
+            <button class="four" id="number">4</button>
+            <button class="five" id="number">5</button>
+            <button class="six" id="number">6</button>
+            <button class="subtract" id="subtract">-</button>
+            <button class="one" id="number">1</button>
+            <button class="two" id="number">2</button>
+            <button class="three" id="number">3</button>
+            <button class="addBTN" id="add">+</button>
+            <button class="zero" id="numberZero">0</button>
+            <button class="dot" id="number">.</button>
+            <button class="equal" id="equal">=</button>
         </div>
     </div>
 
