--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
             <button class="clear" id="clear">AC</button>
             <button class="sign" id="sign">+/-</button>
             <button class="percentage" id="percentage">%</button>
-            <button class="divide" id="divide">/</button>
-            <button class="seven" id="number">7</button>
-            <button class="eight" id="number">8</button>
-            <button class="nine" id="number">9</button>
-            <button class="multiply" id="multiply">*</button>
-            <button class="four" id="number">4</button>
-            <button class="five" id="number">5</button>
-            <button class="six" id="number">6</button>
-            <button class="subtract" id="subtract">-</button>
-            <button class="one" id="number">1</button>
-            <button class="two" id="number">2</button>
-            <button class="three" id="number">3</button>
+            <button class="divideBTN" id="divide">/</button>
+            <button class="numb" id="number">7</button>
+            <button class="numb" id="number">8</button>
+            <button class="numb" id="number">9</button>
+            <button class="multiplyBTN" id="multiply">*</button>
+            <button class="numb" id="number">4</button>
+            <button class="numb" id="number">5</button>
+            <button class="numb" id="number">6</button>
+            <button class="subtractBTN" id="subtract">-</button>
+            <button class="numb" id="number">1</button>
+            <button class="numb" id="number">2</button>
+            <button class="numb" id="number">3</button>
             <button class="addBTN" id="add">+</button>
             <button class="zero" id="numberZero">0</button>
             <button class="dot" id="number">.</button>
